Closed
Bug 217477
Opened 22 years ago
Closed 21 years ago
Message pane and its scrollbars do not resize properly when main window is resized.
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird0.8
People
(Reporter: rob.stow, Assigned: neil)
References
()
Details
Attachments
(5 files, 2 obsolete files)
|
230.88 KB,
image/jpeg
|
Details | |
|
66.46 KB,
image/jpeg
|
Details | |
|
1.20 KB,
patch
|
Details | Diff | Splinter Review | |
|
45.28 KB,
image/gif
|
Details | |
|
1.03 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.5b) Gecko/20030821 Mozilla Firebird/0.6.1+
Build Identifier: Mozilla Thunderbird 0.2a (20030820) (Windows; U; WinNT4.0; en-US)
When resizing the main TBird window with the default 3-pane layout, the message
pane does not properly change size to reflect the new window size. The *width*
will adjust as necessary to keep the window filled, but the *height* stays fixed.
If the window height is being reduced, then the bottom of the message pane will
end up extending invisibly below the bottom of the window - which makes the
vertical scrollbar in the message pane appear to be improperly resized and makes
it seem that attempts to scroll - such as with a wheelmouse - are not working.
In fact the scrollbars are sized perfectly for the message pane and the scolling
is working properly - you just can't see all of the improperly sized message pane.
When the window height is increased, the message pane's height remains fixed and
instead the message list pane is expanded to keep the window filled. This is
counterintuitive: one would expect the message list pane to remain at a fixed
height and the message pane to be expanded to keep the window filled.
Reproducible: Always
Steps to Reproduce:
1. If your TBird window is maximized, un-maximize it so that you can easily
drag the window borders. To help with observing the effects of this bug find at
least a 20 or 30 line mail or news message and display it into the message pane:
you want to provoke the appearance of the scrollbar because it is the primary
visual indicator of this bug.
2. Reduce the height of the window below your starting point in step 1.
3. Increase the height of the window above the initial height from step 1.
Actual Results:
Step 2 results: the message pane retains its size as is indicated by the
scrollbars appearing to be chopped off by the bottom of the window and be your
*apparent* inability to scroll the text.
Step 3 results: the message pane retains its size and the height of the message
list pane is instead increased in order to keep the window filled.
Expected Results:
Step 2 expected: The height of the message pane should have been reduced when
the height of the window was reduced.
Step 3 expected: The height of the message list pane should have stayed
constant and the height of the message pane should have been increased when the
window height was increased.
Several confirmations can be found in the thread "Scroll Bar in Message Pane" in
the newsgroup nntp://secnews.netscape.com:563/netscape.mozilla.thunderbird.
PLEASE keep the word "scrollbar" in the summary even though this is *not* a
scrollbar problem. The scrollbars are the primary symptom indicator of this bug
so have "scrollbar" in the summary will help others find this bug.
Comment 1•22 years ago
|
||
i have uploaded an image depicting bug. very annoying but workaround is to
maximise window.
http://wanto.f2o.org/****/ThunderbirdScroll.gif
Comment 2•22 years ago
|
||
this looks like it is an issue with the resizing of the pane used to display the
bottom part of the window. i have noticed that resizing the pane (by dragging
the horizontal divider) affects this issue, and that the status bar also
disappears. if reproduce the bug, then drag the divider down as far as possible,
the scrollbar and status bar eventually correct themselves. funnily, this is a
problem for both classic and wide view.
Comment 3•22 years ago
|
||
*** Bug 218807 has been marked as a duplicate of this bug. ***
Comment 4•22 years ago
|
||
*** Bug 216486 has been marked as a duplicate of this bug. ***
Comment 5•22 years ago
|
||
This bug is a dupe of bug 214838.
Comment 6•22 years ago
|
||
*** Bug 214838 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Comment 7•22 years ago
|
||
*** Bug 219612 has been marked as a duplicate of this bug. ***
Comment 8•22 years ago
|
||
Besides the scrollbars and the status bar which have been mentioned previously,
also missing once you resize the window is the message attachments in the
message pane. Actully this is the thing I noticed first. I'm not really sure
what we should have for a summary to preven dupes. What is there now would not
have matched what I was searching for, because I searched for "status bar".
Fortunately I did my search in the Thunderbird Bugs Forum so I was directed to
this bug. Otherwise there would have been another dupe. :-(
Updated•22 years ago
|
QA Contact: asa
Comment 10•22 years ago
|
||
I have noticed this bug also occouring in the following situation:
I am on a laptop (IBM thinkpad T30) which has a port replicator. I installed
the 0.3 release of Thunderbird on my machine when hooked up to the dock and on
an external monitor with 1600x1200 resolution.
Everything works fine until I undock and use the built in LCD with 1024x768
resolution. The bottom of the message window and the bottom of the folders
window is cut off.
I have attached an example of the problem..
This is always reproducible
Comment 11•22 years ago
|
||
*** Bug 222630 has been marked as a duplicate of this bug. ***
Comment 12•22 years ago
|
||
Adding an attachment of how the window looks in maximized view. In this
attachment, the status bar is cut off thanks to the taskbar (Windows XP). It's
possible that the status bar may be statically placed, instead of it aligning
itself with the bottom of the window.
Comment 13•22 years ago
|
||
Got the same bug!
Comment 14•22 years ago
|
||
*** Bug 229273 has been marked as a duplicate of this bug. ***
Comment 15•22 years ago
|
||
*** Bug 229283 has been marked as a duplicate of this bug. ***
Comment 16•22 years ago
|
||
A better indicator than the scroll bars is that the status bar is no longer
visible. This bug also only exists when an account subfolder (Inbox, for
example) is selected in the 'Folders' pane -- if you select the accout name
itself, the window is displayed correctly.
Comment 17•22 years ago
|
||
The problem is that the height of the message view is being persisted, but it's
not got any flex, so when the window is resized the message view keeps it's
exact height. Adding flex (copied from MozMail) to the message view makes it
resize with the window, which means no more missing statusbar. :)
Comment 18•22 years ago
|
||
I think you attached the wrong patch by accident James :)
Comment 19•22 years ago
|
||
Attachment #140586 -
Attachment is obsolete: true
Comment 20•22 years ago
|
||
Is this fix only for Thunderbird or for all Mozilla applications?
Mozilla suite also has this Bug 205566, so does Firebird, but I dont know if
there is any bug for it.
Comment 21•22 years ago
|
||
I think the reason I took this flex out had to do with the new feature to
generate all 3 of the 3-pane views dynamically, on the fly. When you switch to
the wide layout view, the flex causes the message pane to have too much
horizontal real estate compared to the thread pane and folder pane.
Comment 22•22 years ago
|
||
I think this change is too risky for 0.5 due to the regression it causes as I
mentioned in my previous comment.
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.6
Comment 23•21 years ago
|
||
Does anyone still see this in a recent nightly?
http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/2004-03-12-trunk
I did make some changes in this area that could have fixed this ~2 weeks ago
Comment 24•21 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 25•21 years ago
|
||
I still see this in the 20040312 build, Windows XP. I can attach a screenshot if
you want.
Comment 26•21 years ago
|
||
Still no statusbar when resizing.
Not sure if there is any difference from before. Maybe it was worse before. Now
it is a bit like Mozilla suite/firefox. They have the same bug (regression).
Comment 27•21 years ago
|
||
umm I checked in the fix yesterday. How can it possibly be in the builds from
yesterday morning? Time travel? :)
Comment 28•21 years ago
|
||
sorry my bad. I fixed a different bug and mark this one fixed by accident
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 29•21 years ago
|
||
this problem has been around in firefox, mozilla and thunderbird for a very long
time. :(
Not a .6 stopper
Target Milestone: Thunderbird0.6 → Thunderbird0.8
Comment 30•21 years ago
|
||
*** Bug 240602 has been marked as a duplicate of this bug. ***
Comment 31•21 years ago
|
||
*** Bug 238002 has been marked as a duplicate of this bug. ***
Comment 32•21 years ago
|
||
*** Bug 232534 has been marked as a duplicate of this bug. ***
Comment 33•21 years ago
|
||
*** Bug 239016 has been marked as a duplicate of this bug. ***
Comment 34•21 years ago
|
||
I've also noticed when resizing the window horizontally, the scrollbars
completely disappear. Is this part of the same bug, or is this a different
one?
Comment 35•21 years ago
|
||
Thunderbird 20040605 , Window not resizing at bottom and status bar missing
still there. BUT!!! moving the horizontal seperation bar down then back to
normal position makes the screen resizr properly. Status bar reapears. If you
are in full screen mode the status bar remains when you close and reopen
Thunderbird. If you change to resizable window you loose the bar on that window
till you drag the horizontal bar down toward the bottom of the window then put
is back.
regards
Adler
| Assignee | ||
Comment 36•21 years ago
|
||
OK, so here's the real reason for the remaining bug.
Mozilla defaults the size of an <html:iframe> to 300x150 pixels because IE does.
Unfortunately, Mozilla also defaults the size of <xul:iframe> and friends.
| Assignee | ||
Comment 37•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Assignee: mscott → neil.parkwaycc.co.uk
Status: REOPENED → ASSIGNED
| Assignee | ||
Comment 38•21 years ago
|
||
Comment on attachment 150710 [details] [diff] [review]
Override natural minimum height
Looking for opinions from the layout heavyweights.
Attachment #150710 -
Flags: superreview?(bzbarsky)
Attachment #150710 -
Flags: review?(roc)
| Assignee | ||
Updated•21 years ago
|
Attachment #150710 -
Flags: superreview?(bzbarsky) → superreview?(jst)
Comment 39•21 years ago
|
||
Comment on attachment 150710 [details] [diff] [review]
Override natural minimum height
Seems reasonable to me, sr=jst
Attachment #150710 -
Flags: superreview?(jst) → superreview+
I don't understand why this patch works. The offending code is here:
http://lxr.mozilla.org/seamonkey/source/layout/html/document/src/nsFrameFrame.cpp#300
It looks like a min-height of less than 150px will just be ignored. What's
really going on? Shouldn't we change nsSubDocumentFrame::GetDesiredSize to do
something different for non-html:iframes?
| Assignee | ||
Comment 41•21 years ago
|
||
OK, so here's roughly what's going on.
When we reflow a <browser>, its preferred size is 300x150 pixels. Now the box to
block adaptor ignores the preferred width but copies the preferred height to the
minimum height. Furthermore, the box then allows the CSS height to override the
preferred height but not the XUL height, unless both height and width are set.
So there are no fewer than four ways to fix this.
1) <browser minheight="1" minwidth="1">
2) browser { min-height: 1px; }
3) Don't make the preferred height of the <browser> 150 pixels
4) Change the way the box to block adaptor works
Comment 42•21 years ago
|
||
At work, we have also had people who have this problem when Thunderbird is
maximized. This occurs in classic & wide-view, where the vertical scrollbar
is cut off at the bottom, the attachments bar, and the status bar are totally
missing. The fix I have been using for now is to go to view>layout & uncheck
message pane.....then I manually drag the message pane back up & everything
looks fine. I hope the fix for the minimized window scrollbar problem will
fix the maximized window scrollbar problem as well. We are having problems
with both.
I think option 3) is probably the best. There is no reason for XUL IFRAMEs to
have a preferred size other than (0,0). Although I wonder if changing that would
break existing XUL apps...
| Assignee | ||
Comment 44•21 years ago
|
||
Attachment #150710 -
Attachment is obsolete: true
| Assignee | ||
Updated•21 years ago
|
Attachment #151086 -
Flags: superreview?(roc)
Attachment #151086 -
Flags: review?(roc)
Attachment #151086 -
Flags: superreview?(roc)
Attachment #151086 -
Flags: superreview+
Attachment #151086 -
Flags: review?(roc)
Attachment #151086 -
Flags: review+
Attachment #150710 -
Flags: superreview+ → superreview-
Attachment #150710 -
Flags: review?(roc) → review-
| Assignee | ||
Comment 45•21 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago → 21 years ago
Resolution: --- → FIXED
Comment 46•21 years ago
|
||
If this resolves the issue and doesn't break anything else, can we get this
checked into Aviary?
Updated•21 years ago
|
Flags: blocking-aviary1.0?
Comment 47•21 years ago
|
||
not going to block the release for this but if the patch author or reviewer
feels it belongs on the branch, they can request approval.
Flags: blocking-aviary1.0? → blocking-aviary1.0-
You need to log in
before you can comment on or make changes to this bug.
Description
•