XUL frame elements should not have the preferred size that HTML iframes do b=217477 r/sr=roc